currency select working with conversions

--- a/components/featured-card.html
+++ b/components/featured-card.html
@@ -8,7 +8,7 @@
     <div class="featured-card-details">
         <h3 class="product-title">8017 WINDGUARD OVERCOAT</h3>
         <div class="product-info-row">
-            <p class="product-title">$180</p>
+            <span class="featured-price price" data-aud="180"></span>
             <div class="color-options">
                 <div class="color-box gray" data-color="gray"></div>
                 <div class="color-box brown" data-color="brown"></div>
@@ -27,7 +27,7 @@
     <div class="featured-card-details">
         <h3 class="product-title">8004 RELAXED FLEECE</h3>
         <div class="product-info-row">
-            <p class="product-title">$140</p>
+            <span class="featured-price price" data-aud="140"></span>
             <div class="color-options">
                 <div class="color-box gray" data-color="gray"></div>
                 <div class="color-box brown" data-color="brown"></div>
@@ -45,7 +45,7 @@
     <div class="featured-card-details">
         <h3 class="product-title">8010 RELAXED COLLARED</h3>
         <div class="product-info-row">
-            <p class="product-title">$95</p>
+            <span class="featured-price price" data-aud="95"></span>
             <div class="color-options">
                 <div class="color-box beige" data-color="beige"></div>
                 <div class="color-box black" data-color="black"></div>
@@ -65,7 +65,7 @@
     <div class="featured-card-details">
         <h3 class="product-title">8001 LIGHT STRINGER</h3>
         <div class="product-info-row">
-            <p class="product-title">$40</p>
+            <span class="featured-price price" data-aud="40"></span>
             <div class="color-options">
                 <div class="color-box black" data-color="black"></div>
                 <div class="color-box gray" data-color="gray"></div>
@@ -83,7 +83,7 @@
     <div class="featured-card-details">
         <h3 class="product-title">8023 KNEECUT JORTS</h3>
         <div class="product-info-row">
-            <p class="product-title">$100</p>
+            <span class="featured-price price" data-aud="100"></span>
             <div class="color-options">
                 <div class="color-box black" data-color="black"></div>
                 <div class="color-box blue" data-color="blue"></div>
@@ -101,7 +101,7 @@
     <div class="featured-card-details">
         <h3 class="product-title">8003 WIDECUT CHINO</h3>
         <div class="product-info-row">
-            <p class="product-title">$140</p>
+            <span class="featured-price price" data-aud="140"></span>
             <div class="color-options">
                 <div class="color-box black" data-color="black"></div>
                 <div class="color-box blue" data-color="blue"></div>
