--- a/components/navbar.html
+++ b/components/navbar.html
@@ -6,7 +6,7 @@
         <ul class="nav-links">
             <li><a href="/pages/shop.html">shop</a></li>
             <li><a href="/pages/lookbook.html">lookbook</a></li>
-            <li><a href="/pages/currency.html">$aud</a></li>
+            <li><a id="currency-toggle">$aud</a></li>
             <li><a id="cart-toggle">cart</a></li>
             <li><a href="/pages/login.html">login</a></li>
         </ul>
