--- a/css/components.css
+++ b/css/components.css
@@ -108,6 +108,14 @@
     background-color: #3c70b4;
 }
 
+.color-box.wine {
+    background-color: #800020;
+}
+
+.color-box.orange {
+    background-color: #ff7300;
+}
+
 .color-box.white {
     background-color: #FFFFFF;
     border: 1px solid #ddd;
