--- a/css/components.css
+++ b/css/components.css
@@ -377,3 +377,18 @@
     cursor: pointer;
     text-align: center;
 }
+
+@media (max-width: 900px) {
+    .add-to-cart {
+        flex-direction: column;
+        align-items: stretch;
+    }
+    .add-number-button, .add-number-input {
+        width: 100%;
+    }
+
+    .add-button {
+        margin-top: 1rem; 
+        width: 100%;
+    }
+}
