changed file paths

--- a/components/featured-card.html
+++ b/components/featured-card.html
@@ -1,8 +1,8 @@
 <!-- First Product -->
 <div class="featured-card" data-product-code="8017">
     <div class="featured-card-image" >
-        <a href="/pages/product.html?code=8017">
-            <img id="product-image-8017" src="../img/8017_gray.jpg" alt="Product Image">
+        <a href="/unComfort/pages/product.html?code=8017">
+            <img id="product-image-8017" src="/unComfort/img/8017_gray.jpg" alt="Product Image">
         </a>
     </div>
     <div class="featured-card-details">
@@ -20,8 +20,8 @@
 <!-- Second Product -->
 <div class="featured-card" data-product-code="8004">
     <div class="featured-card-image">
-        <a href="/pages/product.html?code=8004">
-            <img id="product-image-8004" src="../img/8004_gray.jpg" alt="Product Image">
+        <a href="/unComfort/pages/product.html?code=8004">
+            <img id="product-image-8004" src="/unComfort/img/8004_gray.jpg" alt="Product Image">
         </a>
     </div>
     <div class="featured-card-details">
@@ -38,8 +38,8 @@
 
 <div class="featured-card" data-product-code="8010">
     <div class="featured-card-image">
-        <a href="/pages/product.html?code=8010">
-            <img id="product-image-8010" src="../img/8010_beige.jpg" alt="Product Image">
+        <a href="/unComfort/pages/product.html?code=8010">
+            <img id="product-image-8010" src="/unComfort/img/8010_beige.jpg" alt="Product Image">
         </a>
     </div>
     <div class="featured-card-details">
@@ -58,8 +58,8 @@
 
 <div class="featured-card" data-product-code="8001">
     <div class="featured-card-image">
-        <a href="/pages/product.html?code=8001">
-            <img id="product-image-8001" src="../img/8001_black.jpg" alt="Product Image">
+        <a href="/unComfort/pages/product.html?code=8001">
+            <img id="product-image-8001" src="/unComfort/img/8001_black.jpg" alt="Product Image">
         </a>
     </div>
     <div class="featured-card-details">
@@ -76,8 +76,8 @@
 
 <div class="featured-card" data-product-code="8023">
     <div class="featured-card-image">
-        <a href="/pages/product.html?code=8023">
-            <img id="product-image-8023" src="../img/8023_black.jpg" alt="Product Image">
+        <a href="/unComfort/pages/product.html?code=8023">
+            <img id="product-image-8023" src="/unComfort/img/8023_black.jpg" alt="Product Image">
         </a>
     </div>
     <div class="featured-card-details">
@@ -94,8 +94,8 @@
 
 <div class="featured-card" data-product-code="8003">
     <div class="featured-card-image">
-        <a href="/pages/product.html?code=8003">
-            <img id="product-image-8003" src="../img/8003_black.jpg" alt="Product Image">
+        <a href="/unComfort/pages/product.html?code=8003">
+            <img id="product-image-8003" src="/unComfort/img/8003_black.jpg" alt="Product Image">
         </a>
     </div>
     <div class="featured-card-details">
