--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,23 +4,23 @@
             <span></span><span></span><span></span>
         </button>
         <div class="logo">
-            <a href="/"><span class="un">un</span><span class="comfort">comfort.</span></a>
+            <a href="/unComfort/"><span class="un">un</span><span class="comfort">comfort.</span></a>
         </div>
         <ul class="nav-links">
-            <li><a href="/pages/shop.html">shop</a></li>
-            <li><a href="/pages/lookbook.html">lookbook</a></li>
+            <li><a href="/unComfort/pages/shop.html">shop</a></li>
+            <li><a href="/unComfort/pages/lookbook.html">lookbook</a></li>
             <li><a id="currency-toggle">$aud</a></li>
             <li><a id="cart-toggle">cart</a></li>
-            <li><a href="/pages/login.html">login</a></li>
+            <li><a href="/unComfort/pages/login.html">login</a></li>
         </ul>
         <div class="nav-overlay" id="nav-overlay">
             <button class="nav-close" id="nav-close" aria-label="Close navigation menu">&times;</button>
             <ul class="nav-overlay-links">
-                <li><a href="/pages/shop.html">shop</a></li>
-                <li><a href="/pages/lookbook.html">lookbook</a></li>
+                <li><a href="/unComfort/pages/shop.html">shop</a></li>
+                <li><a href="/unComfort/pages/lookbook.html">lookbook</a></li>
                 <li><a id="currency-toggle-overlay">$aud</a></li>
                 <li><a id="cart-toggle-overlay">cart</a></li>
-                <li><a href="/pages/login.html">login</a></li>
+                <li><a href="/unComfort/pages/login.html">login</a></li>
             </ul>
         </div>
         <div class="currency-overlay" id="currency-overlay" style="display: none;">
