--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,7 +1,10 @@
+<!-- created by ty behnke - 47069374 -->
+<!-- sidebar filters for shop page -->
 <aside class="sidebar">
     <nav class="sidebar-nav">
         <div class="sidebar-section">
             <ul>
+                <!-- empty links listened for click events by shop.js -->
                 <li><a href="#" data-category="all">all</a></li>
                 <li><a href="#" data-category="tees">tees</a></li>
                 <li><a href="#" data-category="hoodies">hoodies</a></li>
@@ -9,6 +12,7 @@
                 <li><a href="#" data-category="singlets">singlets</a></li>
             </ul>
         </div>
+        <!-- seperate divs add spacing -->
         <div class="sidebar-section">
             <ul>
                 <li><a href="#" data-category="bottoms">bottoms</a></li>
