--- a/components/featured-card.html
+++ b/components/featured-card.html
@@ -1,4 +1,5 @@
-<!-- First Product -->
+<!-- created by ty behnke - 47069374 -->
+<!-- featured cards are hardcoded in, dynamic features handled by js -->
 <div class="featured-card" data-product-code="8017">
     <div class="featured-card-image" >
         <a href="/unComfort/pages/product.html?code=8017">
@@ -17,7 +18,6 @@
     </div>
 </div>
 
-<!-- Second Product -->
 <div class="featured-card" data-product-code="8004">
     <div class="featured-card-image">
         <a href="/unComfort/pages/product.html?code=8004">
