--- a/components/navbar.html
+++ b/components/navbar.html
@@ -32,12 +32,12 @@
         <div class="currency-overlay" id="currency-overlay" style="display: none;">
             <button class="currency-close" id="currency-close" aria-label="Close currency menu">&times;</button>
             <ul class="nav-overlay-links">
-                <li><a data-currency="AUD" class="currency-link">aud</a></li>
-                <li><a data-currency="USD" class="currency-link">usd</a></li>
-                <li><a data-currency="EUR" class="currency-link">eur</a></li>
-                <li><a data-currency="GBP" class="currency-link">gbp</a></li>
-                <li><a data-currency="CAD" class="currency-link">cad</a></li>
-                <li><a data-currency="JPY" class="currency-link">jpy</a></li>
+                <li><a data-currency="aud" class="currency-link">aud</a></li>
+                <li><a data-currency="usd" class="currency-link">usd</a></li>
+                <li><a data-currency="eur" class="currency-link">eur</a></li>
+                <li><a data-currency="gbp" class="currency-link">gbp</a></li>
+                <li><a data-currency="cad" class="currency-link">cad</a></li>
+                <li><a data-currency="jpy" class="currency-link">jpy</a></li>
             </ul>
         </div>
     </nav>
